--- a/src/styles.css
+++ b/src/styles.css
@@ -91,4 +91,6 @@ body {
     width: 70px;
     height: 50px;
     left: 40%;
+    transform-origin: center center;
+    transition: transform 0.1s ease-out;
 }
